# modulowosc_sprawdzaczek

./: .gitignore  README.md  build.sh  example_custom_loop_python.json  example_custom_loop_python_forkbomb.json  example_simple_diff_cpp.json  example_simple_diff_cpp_sec.json  example_simple_diff_cpp_slow.json
judge_containers/custom_loop_python/: Dockerfile  judge.py
judge_containers/simple_diff_cpp/: .dockerignore  Dockerfile
judge_containers/simple_diff_cpp/simple_diff_judge/: Cargo.toml
judge_containers/simple_diff_cpp/simple_diff_judge/src/: lib.rs
judge_manager/: .gitignore  go.mod  judge_manager.go
