[package]
name = "simple_diff_judge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caps = "0.5.5"
libseccomp = "0.3.0"
nix = "0.27.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
