[package]
name = "simple_diff_judge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "simple_diff_judge"
path = "src/lib.rs"

[dependencies]
caps = "0.5.5"
seccompiler = "0.4.0"
nix = {version="0.27.1", features=["process", "ptrace", "signal", "resource"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
libc = "0.2"
